@@ -9,6 +9,7 @@ import http.client.HTTPClient;
 
 import java.io.StringReader;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
 import java.util.Date;
@@ -90,7 +91,7 @@ public class Ephemeris {
 		messageContent.append(String.format("<h2>%s</h2>", stationName));
 
 		// 1 - Get station position
-		String tideResourcePath = String.format("tide/tide-stations/%s", URLEncoder.encode(stationName, "UTF-8").replace("+", "%20"));
+		String tideResourcePath = String.format("tide/tide-stations/%s", URLEncoder.encode(stationName, StandardCharsets.UTF_8).replace("+", "%20"));
 		url = String.format("http://%s:%s/%s", serverName, serverPort, tideResourcePath);
 		try {
 			String response = HTTPClient.doGet(url, new HashMap<>());
@@ -135,7 +136,7 @@ public class Ephemeris {
 		String astroResourcePath = "astro/sun-between-dates";
 		String from = DURATION_FMT.format(now.getTime());      // "2017-09-01T00:00:00";
 		String to   = DURATION_FMT.format(tomorrow.getTime()); // "2017-09-02T00:00:01";
-		String tz = URLEncoder.encode("America/Los_Angeles", "UTF-8");
+		String tz = URLEncoder.encode("America/Los_Angeles", StandardCharsets.UTF_8);
 		String latitude = String.valueOf(lat);
 		String longitude = String.valueOf(lng);
 
@@ -183,7 +184,7 @@ public class Ephemeris {
 		// POST http://localhost:9999/tide/tide-stations/Ocean%20Beach%2C%20California/wh?from=2018-01-03T00:00:00&to=2018-01-04T00:00:01
 		String tideResourcePath2 = String.format(
 				"tide/tide-stations/%s/wh?from=%s&to=%s",
-				URLEncoder.encode(stationName, "UTF-8").replace("+", "%20"),
+				URLEncoder.encode(stationName, StandardCharsets.UTF_8).replace("+", "%20"),
 				from,
 				to);
 		url = String.format("http://%s:%s/%s", serverName, serverPort, tideResourcePath2);
