@@ -5,6 +5,7 @@ import tideengine.contracts.BackendDataComputer;
 
 import javax.annotation.Nonnull;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.text.NumberFormat;
 import java.util.*;
 
@@ -209,7 +210,7 @@ public class BackEndTideComputer {
 		if (station != null && station.yearHarmonicsFixed() != -1 && station.yearHarmonicsFixed() != year) { // Then reload station data from source
 			System.out.println("Reloading Station Data for corrections in year " + year);
 			try {
-				TideStation newTs = reloadTideStation(URLDecoder.decode(station.getFullName(), "UTF-8"));
+				TideStation newTs = reloadTideStation(URLDecoder.decode(station.getFullName(), StandardCharsets.UTF_8));
 				stations.getStations().put(station.getFullName(), newTs);
 				station = newTs;
 			} catch (Exception ex) {
