@@ -8,6 +8,7 @@ import tideengine.TideUtilities.TimedValue;
 
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.SimpleDateFormat;
 import java.util.*;
 
@@ -18,7 +19,7 @@ import java.util.*;
 public class SampleMain {
 	private final static SimpleDateFormat SDF = new SimpleDateFormat("yyy-MMM-dd HH:mm z (Z)");
 
-	private static BackEndTideComputer backEndTideComputer = new BackEndTideComputer();
+	private final static BackEndTideComputer backEndTideComputer = new BackEndTideComputer();
 
 	public static void main(String... args) throws Exception {
 		System.out.println(args.length + " Argument(s)...");
@@ -42,8 +43,8 @@ public class SampleMain {
 				String location = null;
 				if (true) {
 //					System.setProperty("tide.verbose", "true");
-//					location = URLEncoder.encode("Port Townsend", "UTF-8").replace("+", "%20");
-					location = URLEncoder.encode("Port-Navalo", "UTF-8").replace("+", "%20");
+//					location = URLEncoder.encode("Port Townsend", StandardCharsets.UTF_8).replace("+", "%20");
+					location = URLEncoder.encode("Port-Navalo", StandardCharsets.UTF_8).replace("+", "%20");
 					ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
 					if (ts != null) {
 						now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
@@ -59,11 +60,11 @@ public class SampleMain {
 							}
 						}
 					} else {
-						System.out.println(String.format("%s not found :(", location));
+						System.out.printf("%s not found :( \n", location);
 					}
 				}
 				if (true) {
-					location = URLEncoder.encode("Fare Ute Point", "UTF-8").replace("+", "%20");
+					location = URLEncoder.encode("Fare Ute Point", StandardCharsets.UTF_8).replace("+", "%20");
 					ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
 					if (ts != null) {
 						now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
@@ -71,7 +72,7 @@ public class SampleMain {
 						System.out.println((ts.isTideStation() ? "Water Height" : "Current Speed") + " in " + location + " at " + now.getTime().toString() + " : " + TideUtilities.DF22PLUS.format(wh) + " " + ts.getDisplayUnit());
 					}
 
-					location = URLEncoder.encode("Oyster Point Marina, San Francisco Bay, California", "UTF-8").replace("+", "%20");
+					location = URLEncoder.encode("Oyster Point Marina, San Francisco Bay, California", StandardCharsets.UTF_8).replace("+", "%20");
 					ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
 					if (ts != null) {
 						now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
@@ -79,7 +80,7 @@ public class SampleMain {
 						System.out.println((ts.isTideStation() ? "Water Height" : "Current Speed") + " in " + location + " at " + now.getTime().toString() + " : " + TideUtilities.DF22PLUS.format(wh) + " " + ts.getDisplayUnit());
 					}
 
-					location = URLEncoder.encode("Shediac Bay, New Brunswick", "UTF-8").replace("+", "%20");
+					location = URLEncoder.encode("Shediac Bay, New Brunswick", StandardCharsets.UTF_8).replace("+", "%20");
 					ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
 					if (ts != null) {
 						now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
@@ -89,7 +90,7 @@ public class SampleMain {
 						System.out.println("-- " + location + " not found...");
 					}
 
-					location = URLEncoder.encode("Alcatraz (North Point)", "UTF-8").replace("+", "%20");
+					location = URLEncoder.encode("Alcatraz (North Point)", StandardCharsets.UTF_8).replace("+", "%20");
 					ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
 					if (ts != null) {
 						now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
@@ -97,7 +98,7 @@ public class SampleMain {
 						System.out.println((ts.isTideStation() ? "Water Height" : "Current Speed") + " in " + location + " at " + now.getTime().toString() + " : " + TideUtilities.DF22PLUS.format(wh) + " " + ts.getDisplayUnit());
 					}
 
-					location = URLEncoder.encode("Cape Cod Canal, Massachusetts Current", "UTF-8").replace("+", "%20");
+					location = URLEncoder.encode("Cape Cod Canal, Massachusetts Current", StandardCharsets.UTF_8).replace("+", "%20");
 					ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
 					if (ts != null) {
 						now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
@@ -106,7 +107,7 @@ public class SampleMain {
 					}
 
 					// Oyster Point for today (every 30 minutes)
-					location = URLEncoder.encode("Oyster Point Marina", "UTF-8").replace("+", "%20");
+					location = URLEncoder.encode("Oyster Point Marina", StandardCharsets.UTF_8).replace("+", "%20");
 					ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
 					if (ts != null) {
 //          TimeZone tz = TimeZone.getDefault();
@@ -228,7 +229,7 @@ public class SampleMain {
 						}
 						after = System.currentTimeMillis();
 						System.out.println("High-Low water Calculation took " + Long.toString(after - before) + " ms");
-						System.out.println("-- " + URLDecoder.decode(location, "UTF-8") + " --");
+						System.out.println("-- " + URLDecoder.decode(location, StandardCharsets.UTF_8) + " --");
 
 						List<TimedValue> timeAL = new ArrayList<>(4);
 						if (low1Cal != null) {
@@ -251,13 +252,13 @@ public class SampleMain {
 					}
 				}
 				// Kodiak for today (every 30 minutes)
-				location = URLEncoder.encode("Kodiak, Women's Bay, Alaska", "UTF-8").replace("+", "%20");
+				location = URLEncoder.encode("Kodiak, Women's Bay, Alaska", StandardCharsets.UTF_8).replace("+", "%20");
 				ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
 
 				if (true) {
 					now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
 					double[] mm = TideUtilities.getMinMaxWH(ts, constSpeed, now);
-					System.out.println("At " + URLDecoder.decode(location, "UTF-8") + " in " + now.get(Calendar.YEAR) + ", min : " + TideUtilities.DF22PLUS.format(mm[TideUtilities.MIN_POS]) + " " + ts.getUnit() + ", max : " + TideUtilities.DF22PLUS.format(mm[TideUtilities.MAX_POS]) + " " + ts.getDisplayUnit());
+					System.out.println("At " + URLDecoder.decode(location, StandardCharsets.UTF_8) + " in " + now.get(Calendar.YEAR) + ", min : " + TideUtilities.DF22PLUS.format(mm[TideUtilities.MIN_POS]) + " " + ts.getUnit() + ", max : " + TideUtilities.DF22PLUS.format(mm[TideUtilities.MAX_POS]) + " " + ts.getDisplayUnit());
 				}
 
 				now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
@@ -332,7 +333,7 @@ public class SampleMain {
 					}
 					after = System.currentTimeMillis();
 					System.out.println("High-Low water Calculation took " + Long.toString(after - before) + " ms");
-					System.out.println("-- " + URLDecoder.decode(location, "UTF-8") + " --");
+					System.out.println("-- " + URLDecoder.decode(location, StandardCharsets.UTF_8) + " --");
 
 					List<TimedValue> timeAL = new ArrayList<>(4);
 					if (low1Cal != null) {
@@ -388,13 +389,13 @@ public class SampleMain {
 				Calendar now = GregorianCalendar.getInstance(TimeZone.getTimeZone("America/Los_Angeles"));
 				String location = null;
 				if (true) {
-					location = URLEncoder.encode("Ocean Beach, California", "UTF-8").replace("+", "%20");
+					location = URLEncoder.encode("Ocean Beach, California", StandardCharsets.UTF_8).replace("+", "%20");
 					TideStation ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
 					now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
 					if (ts != null) {
 						if (true) {
 							double[] mm = TideUtilities.getMinMaxWH(ts, constSpeed, now);
-							System.out.println("At " + URLDecoder.decode(location, "UTF-8") + " on " + now.getTime() + ", min : " + TideUtilities.DF22PLUS.format(mm[TideUtilities.MIN_POS]) + " " + ts.getUnit() + ", max : " + TideUtilities.DF22PLUS.format(mm[TideUtilities.MAX_POS]) + " " + ts.getDisplayUnit());
+							System.out.println("At " + URLDecoder.decode(location, StandardCharsets.UTF_8) + " on " + now.getTime() + ", min : " + TideUtilities.DF22PLUS.format(mm[TideUtilities.MIN_POS]) + " " + ts.getUnit() + ", max : " + TideUtilities.DF22PLUS.format(mm[TideUtilities.MAX_POS]) + " " + ts.getDisplayUnit());
 							System.out.println("------------");
 						}
 						List<TimedValue> table = TideUtilities.getTideTableForOneDay(ts, constSpeed, now.get(Calendar.YEAR), now.get(Calendar.MONTH), now.get(Calendar.DAY_OF_MONTH), null);
