@@ -8,6 +8,7 @@ import tideengine.TideUtilities.TimedValue;
 
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.text.NumberFormat;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
@@ -54,12 +55,12 @@ public class SimplestMain {
         final String STATION_PATTERN = "Patreksfj";
 
         System.setProperty("tide.verbose", "false");
-        location = URLEncoder.encode(STATION_PATTERN, "UTF-8").replace("+", "%20");
+        location = URLEncoder.encode(STATION_PATTERN, StandardCharsets.UTF_8).replace("+", "%20");
         ts = backEndTideComputer.findTideStation(location, now.get(Calendar.YEAR));
         if (ts != null) {
             now.setTimeZone(TimeZone.getTimeZone(ts.getTimeZone()));
             if (ts != null) {
-                String stationFullName = URLDecoder.decode(ts.getFullName(), "UTF-8");
+                String stationFullName = URLDecoder.decode(ts.getFullName(), StandardCharsets.UTF_8);
                 if (false) {
                     double[] mm = TideUtilities.getMinMaxWH(ts, constSpeed, now);
                     System.out.println("At " + stationFullName +
